# math-braid

./: README.md  pyproject.toml
math_braid/: braid.py  permutation.py
