[tool.poetry]
name = "math-braid"
version = "0.8"
description = "Pure python braid group implementation based on sympy."
authors = ["kuboon <kuboon@trick-with.net>"]

[tool.poetry.dependencies]
python = "^3.8"
sympy = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
